full-lint-output.txt

> @tka/studio@2.0.0 lint
> prettier --check . && eslint .

Checking formatting...
[[33mwarn[39m] analyze-lint.mjs
[[33mwarn[39m] src/lib/modules/create/construct/option-picker/components/OptionViewerSection.svelte
[[33mwarn[39m] src/lib/modules/create/construct/option-picker/option-viewer/components/OptionViewerSection.svelte
[[33mwarn[39m] src/lib/modules/explore/gallery/filtering/components/FilterPanel.svelte
[[33mwarn[39m] src/lib/modules/explore/gallery/filtering/components/SortControls.svelte
[[33mwarn[39m] src/lib/modules/explore/shared/components/ExploreSequencesTab.svelte
SyntaxError: 'await' is only allowed within async functions and at the top levels of modules. (429:7)
[0m [90m 427 |[39m
 [90m 428 |[39m       [90m// Execute export using orchestrator service[39m
[31m[1m>[22m[39m[90m 429 |[39m       [36mawait[39m gifExportOrchestrator[33m.[39mexecuteExport(
 [90m     |[39m       [31m[1m^[22m[39m
 [90m 430 |[39m         animationCanvas[33m,[39m
 [90m 431 |[39m         playbackController[33m,[39m
 [90m 432 |[39m         animationPanelState[33m,[39m[0m
    at pa (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:14:16245)
    at ua (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:14:16680)
    at Object.parse (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:15:2919)
    at Object.parse (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier-plugin-tailwindcss/dist/index.mjs:3512:11264)
    at async parse5 (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/index.mjs:16731:11)
    at async textToDoc (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/index.mjs:16842:19) {
  loc: { start: { line: 429, column: 7 } },
  cause: SyntaxError: 'await' is only allowed within async functions and at the top levels of modules. (429:6)
      at r (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:3:12378)
      at ke.raiseOverwrite (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:7:19840)
      at ke.parseMaybeUnary (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:7:112102)
      at ke.parseMaybeUnary (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:7:86377)
      at ke.parseMaybeUnaryOrPrivate (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:7:108840)
      at ke.parseExprOps (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:7:108938)
      at ke.parseMaybeConditional (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:7:108444)
      at ke.parseMaybeAssign (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:7:107503)
      at ke.parseMaybeAssign (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:7:85205)
      at ke.parseExpressionBase (file:///F:/_THE%20KINETIC%20ALPHABET/_TKA-STUDIO/node_modules/prettier/plugins/babel.mjs:7:106716) {
    code: 'BABEL_PARSER_SYNTAX_ERROR',
    reasonCode: 'AwaitNotInAsyncContext',
    loc: B { line: 429, column: 6, index: 14109 },
    pos: 14109,
    syntaxPlugin: undefined
  },
  codeFrame: '\x1B[0m \x1B[90m 427 |\x1B[39m\n' +
    ' \x1B[90m 428 |\x1B[39m       \x1B[90m// Execute export using orchestrator service\x1B[39m\n' +
    '\x1B[31m\x1B[1m>\x1B[22m\x1B[39m\x1B[90m 429 |\x1B[39m       \x1B[36mawait\x1B[39m gifExportOrchestrator\x1B[33m.\x1B[39mexecuteExport(\n' +
    ' \x1B[90m     |\x1B[39m       \x1B[31m\x1B[1m^\x1B[22m\x1B[39m\n' +
    ' \x1B[90m 430 |\x1B[39m         animationCanvas\x1B[33m,\x1B[39m\n' +
    ' \x1B[90m 431 |\x1B[39m         playbackController\x1B[33m,\x1B[39m\n' +
    ' \x1B[90m 432 |\x1B[39m         animationPanelState\x1B[33m,\x1B[39m\x1B[0m'
}
[[33mwarn[39m] src/lib/shared/foundation/ui/Drawer.svelte
[[33mwarn[39m] src/lib/shared/info/components/InfoCommunityPanel.svelte
[[33mwarn[39m] src/lib/shared/settings/components/tabs/AccessibilityTab.svelte
[[33mwarn[39m] src/lib/shared/settings/components/tabs/background/BackgroundTab.svelte
[[33mwarn[39m] src/lib/shared/settings/components/tabs/ProfileTab.svelte
[[33mwarn[39m] src/lib/shared/settings/components/tabs/PropTypeTab.svelte
[[33mwarn[39m] src/lib/shared/settings/components/tabs/VisibilityTab.svelte
[[33mwarn[39m] TYPESCRIPT-SAFETY-FIXES-SUMMARY.md
[[33mwarn[39m] Code style issues found in 14 files. Run Prettier with --write to fix.
